--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
