--- a/gmall-order-web/src/main/resources/application.properties
+++ b/gmall-order-web/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.dubbo.base-package=com.atgg.gmall
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.consumer.timeout=10000
 spring.dubbo.consumer.check=false
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=LEGACYHTML5
+mapper.enum-as-simple-type=true
+
